css/site.css
@import url('https://fonts.googleapis.com/css?family=Dosis');
@import url('https://fonts.googleapis.com/css?family=Montserrat'); 

html, body {
    margin-left: 0;
    margin-right: 0;
    padding-left: 0;
    padding-right: 0;
    margin-top: 8px;
}

/* MAIN NAVIGATION */

nav {
    padding-top: 7px;
}

nav ul {
    list-style: none;
    list-style-image: none;
    padding-left: 35px;
}

nav li {
    display: inline;
    margin: 0 1.5em 10px 0;
}

nav a {
    text-decoration: none;
    font-family: Montserrat;
    font-size: 14px;   
}

nav a:link, nav a:visited {
    color: #8a8a8a;
}

nav #selected, nav a:hover, nav a:active {
    color: #222;
    font-weight: bold;
    border-bottom: 1px solid black;
    padding-bottom: 2px;
}

/* HEADER */

#header {
    display: block;
}

#header-left {
    float: left;
}

#header-right {
    float: right;
    margin-right: 35px;
    margin-bottom: 35px;    
}

#title {
    color: #2e2e2e;
    font-size: 28px;
    font-family: Dosis;
    font-weight: 400;
    font-style: normal;
    line-height: 1em;
    letter-spacing: 0.0714286em;
    margin-bottom: 15px;
}

#subtitle {
    font-family: Montserrat;
    font-size: 13px;
    line-height: 1em;
    color: #999;
    text-align: right;
}

/* IMAGES */

.grid_element {
    display: inline-block;
    width: 200px;
    height:200px;
    zoom: 1;         /* for IE */
    display*:inline; /* for IE */
}

img {
    max-width: 33.33%;
}

#gallery {
    display: block;
    clear: both;
}

/* MOBILE RULES */

@media only screen and (max-width: 600px) {
    img {
        /*        max-width: 100px;*/
    }
}

